updated text error

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <h2>Leg. Sjuksköterska och Certifierad för Botox och Fillers.</h2>
           <p>
             Min ambition är att framhäva och förädla varje individs unika
-            skönhet, där det yttre harmonierar med det inre. Genom noggrannhet
+            skönhet, där det yttre harmoniserar med det inre. Genom noggrannhet
             och estetik skapar jag en helhet som inte bara möter, utan
             överträffar alla förväntningar.
           </p>
