--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><img src="images/image.png" height="70px" /></div>
+        <div class="brand"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
