updated the about section

--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
           <div class="list">
             <div class="row">
               <div class="card">
-                <img src="images/injection.png" width="100%;" alt="Injektion" />
+                <img class="img" src="images/injection.png" alt="Injektion" />
                 <p>
                   <b>✔</b> Högkvalitativa produkter godkända för den svenska
                   marknaden.
                 </p>
               </div>
               <div class="card">
-                <img src="images/kund.png" width="100%" alt="Kundnöjdhet" />
+                <img class="img" src="images/kund.png" alt="Kundnöjdhet" />
                 <p>
                   <b>✔</b> Bemöter dig med lyhördhet, professionalism och ett
                   personligt engagemang.
                 </p>
               </div>
               <div class="card">
-                <img src="images/resultat.png" width="100%" alt="Resultat" />
-                <p><b>✔</b> Snyggt resultat!</p>
+                <img class="img" src="images/resultat.png" alt="Resultat" />
+                <p><b>✔</b> Snygga resultat!</p>
               </div>
             </div>
           </div>
