updated about again

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </p>
               </div>
               <div class="card">
-                <img src="images/resultat.png" width="100%" alt="Resultat" />
+                <img class="img" src="images/resultat.png" alt="Resultat" />
                 <p><b>✔</b> Snygga resultat!</p>
               </div>
             </div>
