some design changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="#ommig">Om mig</a>
             </li>
             <li><a href="#recensioner">Recensioner</a></li>
-            <li><a href="#priser">Priser</a></li>
+            <li><a href="#behandlingar">Behandlingar</a></li>
             <li><a href="#kontakt">Kontakt</a></li>
             <li>
               <a
@@ -81,21 +81,27 @@
           <div class="list">
             <div class="row">
               <div class="card">
-                <img class="img" src="images/injection.png" alt="Injektion" />
+                <div
+                  class="img"
+                  style="background-image: url('images/injection.png')"
+                ></div>
                 <p>
                   <b>✔</b> Högkvalitativa produkter godkända för den svenska
                   marknaden.
                 </p>
               </div>
               <div class="card">
-                <img class="img" src="images/kund.png" alt="Kundnöjdhet" />
+                <div
+                  class="img"
+                  style="background-image: url('images/kund.png')"
+                ></div>
                 <p>
                   <b>✔</b> Bemöter dig med lyhördhet, professionalism och ett
                   personligt engagemang.
                 </p>
               </div>
               <div class="card">
-                <img class="img" src="images/resultat.png" alt="Resultat" />
+                <div class="img" style="background-image: url('images/resultat.png')"/></div>
                 <p><b>✔</b> Snygga resultat!</p>
               </div>
             </div>
@@ -227,7 +233,7 @@
       </script>
 
       <section class="prices">
-        <h1 id="priser">Priser</h1>
+        <h1 id="behandlingar">Behandlingar</h1>
         <div class="row">
           <div class="card1">
             <h2>Konsultation</h2>
