--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beautify Injections</title>
+    <title>Beautify Injections – Botox och Fillers i Stockholm | Vendelsö | Naturliga Resultat</title>
+<meta name="description" content="Beautify Injections erbjuder högkvalitativa botox- och fillerbehandlingar i Stockholm. Certifierad specialist med fokus på naturliga och harmoniska resultat. Boka din tid idag!">
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -86,9 +87,11 @@
                   style="background-image: url('images/injection.png')"
                 ></div>
                 <p>
-                  <b>✔</b> Högkvalitativa produkter godkända för den svenska
-                  marknaden.
+                  <img src="icons/check2.png" height="15px" loading="lazy">
+                   Högkvalitativa produkter
                 </p>
+                <div class="smalltext">Godkända för den svenska
+                  marknaden.</div>
               </div>
               <div class="card">
                 <div
@@ -96,13 +99,16 @@
                   style="background-image: url('images/kund.png')"
                 ></div>
                 <p>
-                  <b>✔</b> Bemöter dig med lyhördhet, professionalism och ett
-                  personligt engagemang.
+                  <img src="icons/check2.png" height="15px" loading="lazy"> Kunden i fokus
                 </p>
+                <div class="smalltext">Lyhördhet, professionalism och ett personligt engagemang.</div>
               </div>
               <div class="card">
                 <div class="img" style="background-image: url('images/resultat.png')"/></div>
-                <p><b>✔</b> Snygga resultat!</p>
+                <p>
+                  <img src="icons/check2.png" height="15px" loading="lazy"> Snygga resultat!
+                </p>
+                <div class="smalltext">Vi återskapar och lyfter fram det vackra i dig.</div>
               </div>
             </div>
           </div>
@@ -115,11 +121,11 @@
             <div class="swiper-slide">
               <div class="card">
                 <div class="rating">
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
                 </div>
                 <h3>
                   Cecilia är underbar, ärlig med vad hon tycker och får alltid
@@ -131,11 +137,11 @@
             <div class="swiper-slide">
               <div class="card">
                 <div class="rating">
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
                 </div>
                 <h3>
                   Cecilia är så jordnära, kunning, alltid nöjd efter besöket!
@@ -147,11 +153,11 @@
             <div class="swiper-slide">
               <div class="card">
                 <div class="rating">
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
                 </div>
                 <h3>
                   Har aldrig varit annat än supernöjd hos Cecilia. Hon är lyhörd
@@ -163,11 +169,11 @@
             <div class="swiper-slide">
               <div class="card">
                 <div class="rating">
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
                 </div>
                 <h3>
                   Har gått hos Cecilia i 4 år och kan inte önska mig något mer.
@@ -180,11 +186,11 @@
             <div class="swiper-slide">
               <div class="card">
                 <div class="rating">
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
-                  <img src="icons/star.png" height="30px" />
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
+                  <img src="icons/star.png" height="30px" alt="betyg" loading="lazy"/>
                 </div>
                 <h3>
                   Cecilia var väldigt tålmodig och flexibel med min rädsla för
@@ -210,9 +216,9 @@
             <h1>Varierande</h1>
             <a
               href="https://www.bokadirekt.se/places/beautify-injections-29152"
-              target="_blank"
+              target="_blank" alt="konsultation"
             >
-              <button>Boka nu</button>
+              <button>Läs mer</button>
             </a>
           </div>
           <div class="card2">
@@ -221,9 +227,9 @@
             <h1>1500kr</h1>
             <a
               href="https://www. nudirekt.se/places/beautify-injections-29152"
-              target="_blank"
+              target="_blank" alt="Botox"
             >
-              <button>Boka nu</button>
+              <button>Läs mer</button>
             </a>
           </div>
           <div class="card3">
@@ -232,9 +238,9 @@
             <h1>2100kr</h1>
             <a
               href="https://www.bokadirekt.se/places/beautify-injections-29152"
-              target="_blank"
+              target="_blank" alt="Fillers"
             >
-              <button>Boka nu</button>
+              <button>Läs mer</button>
             </a>
           </div>
           <div class="card3">
@@ -243,7 +249,7 @@
             <h1>2400kr</h1>
             <a
               href="https://www.bokadirekt.se/places/beautify-injections-29152"
-              target="_blank"
+              target="_blank" alt="profhilo"
             >
               <button>Boka nu</button>
             </a>
@@ -287,5 +293,26 @@
 
     <script src="script.js">
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Beautify Injections",
+        "image": "https://xsvedisx.github.io/beautify/images/image.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Vendelsö skolväg 124",
+          "addressLocality": "Vendelsö",
+          "postalCode": "136 71",
+          "addressCountry": "SE"
+        },
+        "telephone": "+46760237633",
+        "email": "cecilia.lind.89@hotmail.com",
+        "url": "https://www.beautifyinjections.se",
+        "sameAs": [
+          "https://www.instagram.com/beautifyinjections/"
+        ]
+      }
+      </script>
   </body>
 </html>
