--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Birthstone&family=Lexend+Deca:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -20,7 +21,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"></div>
+        <div class="brand"><!-- <img src="images/image.png" height="60px"> -->Beautify<p>injections</p></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
@@ -51,7 +52,7 @@
     <main>
       <section class="hero" id="hero">
         <div class="container">
-          <h3>Beautify injections</h3>
+          <h3>Beautify<p>injections</p></h3>
           <h1>Förstärk din naturliga skönhet.</h1>
           <p>
             Med en noggrann och personlig touch skapar vi harmoni mellan insida
