--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           <h1>Förstärk din naturliga skönhet.</h1>
           <p>
             Med en noggrann och personlig touch skapar vi harmoni mellan insida
-            och utsida, för ett resultat som inte bara möter utan överträffar
-            dina förväntningar. Låt oss tillsammans lyfta fram din naturliga
+            och utsida. Låt oss tillsammans lyfta fram din naturliga
             lyster och förädla det vackra i dig.
           </p>
           <a
