--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Beautify Injections",
+        "image": "https://xsvedisx.github.io/beautify/images/image.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Vendelsö skolväg 124",
+          "addressLocality": "Vendelsö",
+          "postalCode": "136 71",
+          "addressCountry": "SE"
+        },
+        "telephone": "+46760237633",
+        "email": "cecilia.lind.89@hotmail.com",
+        "url": "https://www.beautifyinjections.se",
+        "sameAs": [
+          "https://www.instagram.com/beautifyinjections/"
+        ]
+      }
+      </script>
   </head>
   <body>
     <header>
@@ -214,12 +235,7 @@
             <h2>Konsultation</h2>
             <h3>Från</h3>
             <h1>Varierande</h1>
-            <a
-              href="https://www.bokadirekt.se/places/beautify-injections-29152"
-              target="_blank" alt="konsultation"
-            >
-              <button>Läs mer</button>
-            </a>
+            <a href="#merKonsultation"><button id="visaKonsultation">Läs mer</button></a>
           </div>
           <div class="card2">
             <h2>Botox</h2>
@@ -243,7 +259,7 @@
               <button>Läs mer</button>
             </a>
           </div>
-          <div class="card3">
+          <div class="card4">
             <h2>PROFHILO®</h2>
             <h3>Från</h3>
             <h1>2400kr</h1>
@@ -255,6 +271,12 @@
             </a>
           </div>
         </div>
+        <div id="merKonsultation" style="display:none;width:100%;padding:20px;">
+          <h1>Konsultation</h1>
+          <h3>20 minuter</h3>
+          <p>Under vår konsultation via telefon eller besök på salongen går vi tillsammans igenom dina önskemål och  förutsättningar för de områden du önskar behandla. Du får även fylla i en hälsodeklaration och samtycke. Tillsammans lägger vi upp en behandlingsplan som passar dig. 
+            Skriv i kommentar vid bokning om du vill bli uppringd eller komma på fysiskt besök.</p>
+        </div>
       </section>
 
       <footer>
@@ -264,11 +286,11 @@
             <a
               href="https://www.google.com/maps/dir/?api=1&destination=59.1926,18.1862"
               target="_blank"
-              >Vendelsö skolväg 124<br />136 71, Vendelsö</a
+              >Vendelsö skolväg 124<br> 136 71, Vendelsö</a
             >
           </div>
           <div>
-            <img src="icons/telephone.png" height="12px" /> 070 xxx xxxx<br />
+            <img src="icons/telephone.png" height="12px" /> 076 023 7633<br />
             <img src="icons/email.png" height="12px" />
             <a href="mailto:cecilia.lind.89@hotmail.com"
               >cecilia.lind.89@hotmail.com</a
@@ -279,40 +301,26 @@
               href="https://www.instagram.com/beautifyinjections/"
               target="_blank"
             >
-              <img src="icons/ig.png" height="16px" />
+              <img src="icons/ig.png" height="14px" />
+              beautifyinjections</a
+            ><br>
+            <a
+              href="https://www.instagram.com/beautifyinjections/"
+              target="_blank"
+            >
+              <img src="icons/fb.png" height="14px" />
               beautifyinjections</a
             >
           </div>
         </div>
         <div class="content">
           Sida skapad av:
-          <a href="henriksvedsater.se" target="_blank"> henriksvedsater.se</a>
+          <a href="https://henriksvedsater.se" target="_blank"> henriksvedsater.se</a>
         </div>
       </footer>
     </main>
 
     <script src="script.js">
     </script>
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "Beautify Injections",
-        "image": "https://xsvedisx.github.io/beautify/images/image.png",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Vendelsö skolväg 124",
-          "addressLocality": "Vendelsö",
-          "postalCode": "136 71",
-          "addressCountry": "SE"
-        },
-        "telephone": "+46760237633",
-        "email": "cecilia.lind.89@hotmail.com",
-        "url": "https://www.beautifyinjections.se",
-        "sameAs": [
-          "https://www.instagram.com/beautifyinjections/"
-        ]
-      }
-      </script>
   </body>
 </html>
