--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               beautifyinjections</a
             ><br>
             <a
-              href="https://www.instagram.com/beautifyinjections/"
+              href="https://www.facebook.com/beautifyinjections/"
               target="_blank"
             >
               <img src="icons/fb.png" height="14px" />
