changed logo etc

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><!-- <img src="images/image.png" height="60px"> -->Beautify<p>injections</p></div>
+        <div class="brand"><!-- <img src="images/image.png" height="60px"> --><img src="images/beautifyLogo2.png" alt="BeautifyInjections.se" height="45px"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
@@ -73,12 +73,11 @@
     <main>
       <section class="hero" id="hero">
         <div class="container">
-          <h3>Beautify<p>injections</p></h3>
           <h1>Förstärk din naturliga skönhet.</h1>
           <p>
             Med en noggrann och personlig touch skapar vi harmoni mellan insida
-            och utsida. Låt oss tillsammans lyfta fram din naturliga
-            lyster och förädla det vackra i dig.
+            och utsida. Låt oss lyfta fram din naturliga
+            lyster och förädla det redan vackra i dig.
           </p>
           <a
             href="https://www.bokadirekt.se/places/beautify-injections-29152"
@@ -235,7 +234,7 @@
             <h2>Konsultation</h2>
             <h3>Från</h3>
             <h1>Varierande</h1>
-            <a href="#merKonsultation"><button id="visaKonsultation">Läs mer</button></a>
+            <button>Läs mer</button>
           </div>
           <div class="card2">
             <h2>Botox</h2>
@@ -245,7 +244,7 @@
               href="https://www. nudirekt.se/places/beautify-injections-29152"
               target="_blank" alt="Botox"
             >
-              <button>Läs mer</button>
+            <a href="#merKonsultation"><button id="visaKonsultation">Läs mer</button></a>
             </a>
           </div>
           <div class="card3">
@@ -271,11 +270,56 @@
             </a>
           </div>
         </div>
-        <div id="merKonsultation" style="display:none;width:100%;padding:20px;">
+        <div id="mera" style="display:none;width:100%;padding:20px;">
           <h1>Konsultation</h1>
           <h3>20 minuter</h3>
           <p>Under vår konsultation via telefon eller besök på salongen går vi tillsammans igenom dina önskemål och  förutsättningar för de områden du önskar behandla. Du får även fylla i en hälsodeklaration och samtycke. Tillsammans lägger vi upp en behandlingsplan som passar dig. 
             Skriv i kommentar vid bokning om du vill bli uppringd eller komma på fysiskt besök.</p>
+            <a
+              href="https://www.bokadirekt.se/places/beautify-injections-29152"
+              target="_blank" alt="profhilo"
+            >
+              <button>Boka nu</button>
+            </a>
+        </div>
+
+
+        <div id="merKonsultation" style="display:none;width:100%;padding:20px;">
+          <h1>Botox</h1>
+          <h3>20-30 minuter</h3>
+          <p>Botox är en av de mest populära och effektiva icke-kirurgiska behandlingarna för att bekämpa tecken på åldrande. Genom att injicera små mängder botulinumtoxin i specifika muskler i ansiktet, kan vi tillfälligt slappna av dessa muskler och minska uppkomsten av rynkor och fina linjer. Det är ett snabbt och enkelt sätt att återfå en ungdomlig och fräsch look utan behov av operation eller lång återhämtningstid.</p>
+          <h2 style="margin-top:20px;">Hur Botox fungerar:</h2>
+
+          <p>Botox verkar genom att blockera nervimpulser till de muskler som orsakar rynkor. När musklerna slappnar av, minskar linjer och rynkor i huden, vilket ger ett slätare och mer ungdomligt utseende. Behandlingen är snabb och utförs i klinikens lugna och säkra miljö. Resultatet är synligt efter några dagar och varar i 3-6 månader beroende på individuella faktorer.</p>
+
+          <h2 style="margin-top:20px;">Vanliga behandlingsområden:</h2>
+          <img src="images/BotoxOmraden.png" style="max-width:1000px;width:100%;">
+
+          <h2 style="margin-top:20px;">Fördelar med Botox:</h2>
+          <img src="icons/check2.png" height="15px" loading="lazy"> <b>Snabbt och effektivt:</b> Behandlingen tar bara 10-20 minuter och kräver ingen återhämtningstid.
+          <br><br>
+          <img src="icons/check2.png" height="15px" loading="lazy"> <b>Naturliga resultat:</b> Botox ger ett fräscht och ungdomligt utseende utan att förändra ditt naturliga ansiktsuttryck.
+          <br><br>
+          <img src="icons/check2.png" height="15px" loading="lazy"> <b>Icke-kirurgisk behandling:</b> Botox kräver ingen kirurgi, vilket innebär lägre risker och snabbare återhämtning.
+          <br><br>
+          <img src="icons/check2.png" height="15px" loading="lazy"> <b>Långvarig effekt:</b> Behandlingen ger resultat som varar mellan 3 och 6 månader.
+
+          <h2 style="margin-top:20px;">Biverkningar och risker:</h2>
+          <p>
+            Botox är en säker behandling när den utförs av en kvalificerad specialist. De vanligaste biverkningarna är lätt rodnad eller svullnad vid injektionsstället, men dessa går oftast över på några timmar. I mycket sällsynta fall kan det uppstå mer allvarliga biverkningar, som asymmetriska resultat eller tillfällig muskelsvaghet. Därför är det viktigt att behandlingen utförs av erfarna och certifierade läkare eller behandlare.
+          </p>
+
+          <h2 style="margin-top:20px;">Är Botox rätt för dig?</h2>
+          <p>
+            Botox är ett utmärkt alternativ för personer som vill förbättra sitt utseende utan att genomgå kirurgiska ingrepp. Om du är osäker på om Botox är rätt behandling för dig, erbjuder jag en kostnadsfri konsultation där jag tillsammans går igenom dina mål och önskemål.
+          </p>
+
+            <a
+              href="https://www.bokadirekt.se/places/beautify-injections-29152"
+              target="_blank" alt="profhilo"
+            >
+              <button>Boka nu</button>
+            </a>
         </div>
       </section>
 
