changed logo etc

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><!-- <img src="images/image.png" height="60px"> --><img src="images/beautifyLogo2.png" alt="BeautifyInjections.se" height="45px"></div>
+        <div class="brand"><img src="images/BeautifyLogo2.png" alt="BeautifyInjections.se" height="45px"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
