changed logo etc

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
           <h2 style="margin-top:20px;">Är Botox rätt för dig?</h2>
           <p>
-            Botox är ett utmärkt alternativ för personer som vill förbättra sitt utseende utan att genomgå kirurgiska ingrepp. Om du är osäker på om Botox är rätt behandling för dig, erbjuder jag en kostnadsfri konsultation där jag tillsammans går igenom dina mål och önskemål.
+            Botox är ett utmärkt alternativ för personer som vill förbättra sitt utseende utan att genomgå kirurgiska ingrepp. Om du är osäker på om Botox är rätt behandling för dig, erbjuder jag en konsultation där vi tillsammans går igenom dina mål och önskemål.
           </p>
 
             <a
