--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="https://use.typekit.net/epw8sti.css">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -44,7 +45,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><img src="images/coledaLogo3.png" alt="BeautifyInjections.se" height="65px"></div>
+        <div class="brand"><img src="images/coledaLogo3.png" alt="BeautifyInjections.se" height="60px"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
