--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "Beautify Injections",
-        "image": "https://xsvedisx.github.io/beautify/images/image.png",
+        "name": "Coleda Estetik",
+        "image": "https://xsvedisx.github.io/beautify/images/ColedaLogo.png",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Vendelsö skolväg 124",
@@ -35,7 +35,7 @@
         },
         "telephone": "+46760237633",
         "email": "cecilia.lind.89@hotmail.com",
-        "url": "https://www.beautifyinjections.se",
+        "url": "https://www.coleda.se",
         "sameAs": [
           "https://www.instagram.com/beautifyinjections/"
         ]
@@ -45,7 +45,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><img src="images/coledaLogo3.png" alt="BeautifyInjections.se" height="60px"></div>
+        <div class="brand"><img src="images/coledaLogo.png" alt="coledas.se" height="70px"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
@@ -61,7 +61,7 @@
             <a href="#kontakt"<><li>Kontakt</li></a>
             <li>
               <a
-                href="https://www.bokadirekt.se/places/beautify-injections-29152"
+                href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
                 target="_blank"
               >
                 <button>Boka</button>
@@ -81,7 +81,7 @@
             lyster och förädla det redan vackra i dig.
           </p>
           <a
-            href="https://www.bokadirekt.se/places/beautify-injections-29152"
+            href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
             target="_blank"
           >
             <button>Boka online</button>
@@ -283,7 +283,7 @@
             <h3>Från</h3>
             <h1>1500kr</h1>
             <a
-              href="https://www. nudirekt.se/places/beautify-injections-29152"
+              href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
               target="_blank" alt="Botox"
             >
            <button>Boka tid</button>
@@ -294,7 +294,7 @@
             <h3>Från</h3>
             <h1>2100kr</h1>
             <a
-              href="https://www.bokadirekt.se/places/beautify-injections-29152"
+              href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
               target="_blank" alt="Fillers"
             >
               <button>Boka tid</button>
@@ -305,7 +305,7 @@
             <h3>Från</h3>
             <h1>2400kr</h1>
             <a
-              href="https://www.bokadirekt.se/places/beautify-injections-29152"
+              href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
               target="_blank" alt="profhilo"
             >
               <button>Boka tid</button>
