--- a/index.html
+++ b/index.html
@@ -278,10 +278,14 @@
       <section class="prices">
         <h2 id="priser">Priser</h2>
         <div class="row">
-          <div class="card2">
+          <div class="card1">
             <h2>Botox</h2>
-            <h3>Från</h3>
             <h1>1500kr</h1>
+            <img src="icons/check.png" width="20px" style="margin:10px 0px">
+            <img src="icons/check.png" width="20px" style="margin:10px 0px">
+            <img src="icons/check.png" width="20px" style="margin:10px 0px">
+            <img src="icons/check.png" width="20px" style="margin:10px 0px">
+            <img src="icons/check.png" width="20px" style="margin:10px 0px">
             <a
               href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
               target="_blank" alt="Botox"
@@ -289,9 +293,8 @@
            <button>Boka tid</button>
             </a>
           </div>
-          <div class="card3">
+          <div class="card2">
             <h2>Fillers</h2>
-            <h3>Från</h3>
             <h1>2100kr</h1>
             <a
               href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
@@ -300,9 +303,8 @@
               <button>Boka tid</button>
             </a>
           </div>
-          <div class="card4">
+          <div class="card1">
             <h2>PROFHILO®</h2>
-            <h3>Från</h3>
             <h1>2400kr</h1>
             <a
               href="https://www.bokadirekt.se/places/coleda-estetik-haninge-29152"
