--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body>
     <header>
       <div class="navigationContainer">
-        <div class="brand"><img src="images/coledaLogo.png" alt="coledas.se" height="70px"></div>
+        <div class="brand"><img src="images/ColedaLogo.png" alt="coledas.se" height="70px"></div>
         <!-- Hamburger Icon -->
         <div class="hamburger-menu" id="hamburger">
           <div></div>
